stateDiagram-v2
    [*] --> SIGNAL_CREATED
    SIGNAL_CREATED --> VALIDATING
    VALIDATING --> RISK_REJECTED
    VALIDATING --> SAFETY_REJECTED
    VALIDATING --> APPROVED
    APPROVED --> EXECUTING
    EXECUTING --> EXECUTED
    EXECUTING --> BROKER_REJECTED
    EXECUTING --> UNKNOWN
    UNKNOWN --> RECONCILING
    RECONCILING --> RECONCILED_EXECUTED
    RECONCILING --> UNKNOWN_NEEDS_REVIEW
    EXECUTED --> OPEN_MONITORING
    RECONCILED_EXECUTED --> OPEN_MONITORING
    OPEN_MONITORING --> CLOSED_TP
    OPEN_MONITORING --> CLOSED_SL_LOSS
    OPEN_MONITORING --> CLOSED_PROFIT_LOCK
    OPEN_MONITORING --> CLOSED_MANUAL

